<resources>
    <string name="app_name">MyCaculator</string>
    <string name="text_ac">AC</string>
    <string name="text_caculate1">%</string>
    <string name="text_devide">/</string>
    <string name="text_7">7</string>
    <string name="text_8">8</string>
    <string name="text_9">9</string>
    <string name="text_mutiply">x</string>
    <string name="text_4">4</string>
    <string name="text_5">5</string>
    <string name="text_6">6</string>
    <string name="text_subtract">-</string>
    <string name="text_1">1</string>
    <string name="text_2">2</string>
    <string name="text_3">3</string>
    <string name="text_plus">+</string>
    <string name="text_0">0</string>
    <string name="text_dot">.</string>
    <string name="text_equal">=</string>
    <string name="text_00">00</string>
    <string name="text_C">C</string>
    <string name="text_mutiplied">*</string>
    <string name="darkmode">Dark</string>
    <string name="text_light">Light</string>
    <string name="text_calculation_history">Calculation History</string>

    <string-array name="spiner_items">
        <item>Calculation History</item>
        <item>Settings</item>
    </string-array>
</resources>